--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ui": "pnpm dlx shadcn@latest",
     "db:push": "prisma migrate dev",
     "db:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "messages:extract": "i18next --config i18next-parser.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "5.20.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.15",
@@ -32,6 +34,7 @@
     "better-auth": "0.5.3-beta.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18next": "^23.16.4",
     "lucide-react": "^0.447.0",
     "next-themes": "^0.3.0",
     "non.geist": "^1.0.3",
@@ -39,11 +42,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-i18next": "^15.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.4.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
@@ -60,6 +65,8 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.10.0",
+    "i18next-parser": "^9.0.2",
+    "i18next-scanner": "^4.6.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
